--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "lucide-react": "^0.563.0",
     "multer": "^2.0.2",
     "multer-storage-cloudinary": "^2.2.1",
-    "next": "16.1.4",
+    "next": "^16.1.6",
     "next-themes": "^0.4.6",
     "react": "19.2.3",
     "react-dom": "19.2.3",
